edition = "2023";

package wayplatform.connect.tachograph.datadictionary.v1;

import "wayplatform/connect/tachograph/datadictionary/v1/card_slot_number.proto";
import "wayplatform/connect/tachograph/datadictionary/v1/driver_activity_value.proto";
import "wayplatform/connect/tachograph/datadictionary/v1/driving_status.proto";

// Represents a change in driver activity, driving status, or card status.
// This is a parsed representation of the `ActivityChangeInfo` bitfield.
//
// See Data Dictionary, Section 2.1, `ActivityChangeInfo`.
//
// ASN.1 Specification:
//
//     ActivityChangeInfo ::= OCTET STRING (SIZE (2))
//
// The 2-byte bitfield has the following structure (MSB to LSB for each byte):
//
// Byte 1:
// | Bit 7 | Bit 6 | Bit 5 | Bit 4 | Bit 3 | Bit 2 | Bit 1 | Bit 0 |
// |-------|-------|-------|-------|-------|-------|-------|-------|
// |  t(10)|  t(9) |  t(8) |  a(1) |  a(0) |   c   |   p   |   s   |
//
// Byte 2:
// | Bit 7 | Bit 6 | Bit 5 | Bit 4 | Bit 3 | Bit 2 | Bit 1 | Bit 0 |
// |-------|-------|-------|-------|-------|-------|-------|-------|
// |  t(7) |  t(6) |  t(5) |  t(4) |  t(3) |  t(2) |  t(1) |  t(0) |
//
// Field mapping:
// - s:           Card slot number (1 bit)
// - p:           Card inserted status (1 bit)
// - c:           Driving status (1 bit)
// - a a:         Driver activity (2 bits)
// - t...t:       Time of change in minutes since midnight (11 bits)
message ActivityChangeInfo {
  // Slot of the driver/co-driver. Corresponds to bit 's'.
  CardSlotNumber slot = 1;

  // Driving status (single or crew). Corresponds to bit 'c'.
  DrivingStatus driving_status = 3;

  // Indicates if a card is inserted. Corresponds to bit 'p'.
  // ASN.1 value `0` maps to `true`, `1` to `false`.
  bool inserted = 5;

  // Driver's activity (break/rest, availability, work, driving). Corresponds to bits 'aa'.
  DriverActivityValue activity = 7;

  // Time of the change in minutes since 00:00. Corresponds to bits 'ttttttttttt'.
  int32 time_of_change_minutes = 9;
}
