edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

// Represents the data structure for an ActivitiesGen2v2 transfer.
// See Appendix 7, Section 2.2.6.3.
message ActivitiesGen2v2 {

  message CardIWRecord {
    // See Appendix 1, 2.177
    string card_holder_name = 1;
    string full_card_number = 2;
    uint32 card_expiry_date = 3;
    uint32 card_insertion_time_seconds = 4;
    uint32 odometer_at_insertion_km = 5;
    uint32 card_slot_number = 6;
    uint32 card_withdrawal_time_seconds = 7;
    uint32 odometer_at_withdrawal_km = 8;
    string previous_vrn = 9;
    uint32 previous_card_withdrawal_time_seconds = 10;
    uint32 manual_input_flag = 11;
  }

  message ActivityChange {
    // See Appendix 1, 2.1
    uint32 slot = 1;
    uint32 driving_status = 2;
    uint32 card_status = 3;
    uint32 activity = 4;
    uint32 time_of_change_minutes = 5;
  }

  message PlaceRecord {
    // See Appendix 1, 2.117
    uint32 entry_time_seconds = 1;
    uint32 entry_type = 2;
    uint32 country = 3;
    uint32 region = 4;
    uint32 odometer_km = 5;
  }

  message GnssPlaceAuthRecord {
    // See Appendix 1, 2.79c
    uint32 timestamp_seconds = 1;
    uint32 gnss_accuracy = 2;
    sint32 longitude = 3;
    sint32 latitude = 4;
    uint32 authentication_status = 5;
  }

  message VuGnssAdRecord {
    // See Appendix 1, 2.203
    uint32 timestamp_seconds = 1;
    GnssPlaceAuthRecord place_record = 2;
  }

  message SpecificConditionRecord {
    // See Appendix 1, 2.152
    uint32 entry_time_seconds = 1;
    uint32 specific_condition_type = 2;
  }

  message BorderCrossingRecord {
    // See Appendix 1, 2.203a
    string full_card_number = 1;
    uint32 card_generation = 2;
    uint32 country_left = 3;
    uint32 country_entered = 4;
    GnssPlaceAuthRecord place_record = 5;
    uint32 odometer_km = 6;
  }

  message LoadUnloadRecord {
    // See Appendix 1, 2.208a
    enum OperationType {
      OPERATION_TYPE_UNSPECIFIED = 0;
      LOAD = 1;
      UNLOAD = 2;
      SIMULTANEOUS = 3;
    }
    string full_card_number = 1;
    uint32 card_generation = 2;
    OperationType operation_type = 3;
    GnssPlaceAuthRecord place_record = 4;
    uint32 odometer_km = 5;
  }

  uint32 date_of_day_seconds = 1;
  uint32 odometer_midnight_km = 2;
  repeated CardIWRecord card_iw_data = 3;
  repeated ActivityChange activity_changes = 4;
  repeated PlaceRecord places = 5;
  repeated VuGnssAdRecord gnss_accumulated_driving = 6;
  repeated SpecificConditionRecord specific_conditions = 7;
  repeated BorderCrossingRecord border_crossings = 8;
  repeated LoadUnloadRecord load_unload_operations = 9;

  // Gen2 signature (ECC).
  bytes signature = 10;
}